--- a/css/principal.css
+++ b/css/principal.css
@@ -604,7 +604,7 @@ background-color: #20b358;
     position: fixed;
     top: 60px; /* Ajusta según la altura de tu nav */
     width: 100%;
-    background-color: #FF5733;
+    background-color:#333;
     color: white;
     text-align: center;
     font-size: 1.2rem;
