--- a/css/principal.css
+++ b/css/principal.css
@@ -680,7 +680,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     z-index: 10;
-    : 0 2px 10px rgb(0, 0, 0, 0.1);
+    box-shadow : 0 2px 10px rgb(0, 0, 0, 0.1);
     }
     
     .logo img {
@@ -790,7 +790,7 @@ nav {
         border-radius: 25px;
         margin-top: 50px;
         transition: background-color 0.3s;
-        : 5px 5px 50px rgb(255, 255, 255, 0.5); 
+        box-shadow : 5px 5px 50px rgb(255, 255, 255, 0.5); 
     }
     
     .cta-button-secondary:hover {
@@ -835,7 +835,7 @@ nav {
     }
     .benefit-card, .service-card {
         background: white;
-        : 0px 4px 8px rgb(0, 0, 0, 0.1);
+        box-shadow : 0px 4px 8px rgb(0, 0, 0, 0.1);
         padding: 20px;
         border-radius: 15px;
         width: 300px;
@@ -863,7 +863,7 @@ nav {
     
     .plan-card {
     background: white;
-    : 0px 4px 8px rgb(0, 0, 0, 0.1);
+    box-shadow   : 0px 4px 8px rgb(0, 0, 0, 0.1);
     padding: 20px;
     border-radius: 15px;
     width: 300px;
@@ -925,7 +925,7 @@ nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        : 0px 2px 4px rgb(0, 0, 0, 0.1);
+        box-shadow  : 0px 2px 4px rgb(0, 0, 0, 0.1);
     }
     .faq-answer {
         display: none;
@@ -933,7 +933,7 @@ nav {
         background: #f9f9f9;
         border-radius: 5px;
         margin-top: 5px;
-        : 0px 2px 4px rgb(0, 0, 0, 0.1);
+        box-shadow: 0px 2px 4px rgb(0, 0, 0, 0.1);
     }
     /* Footer */
     footer {
@@ -972,7 +972,7 @@ nav {
     
     .plan-card {
     background: white;
-    : 0px 4px 16px rgb(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 16px rgb(0, 0, 0, 0.1);
     padding: 30px;
     border-radius: 15px;
     width: 300px;
@@ -1028,7 +1028,7 @@ nav {
     p.plan-price{margin-top:20px;margin-bottom:20px;}
     .service-card {
     background: white;
-    : 0px 8px 16px rgb(0, 0, 0, 0.1);
+    box-shadow: 0px 8px 16px rgb(0, 0, 0, 0.1);
     padding: 20px;
     border-radius: 15px;
     width: 300px;
@@ -1038,7 +1038,7 @@ nav {
     
     .service-card:hover {
     transform: translateY(-5px);
-    : 0px 12px 24px rgb(0, 0, 0, 0.2); /* Sombra más pronunciada al hacer hover */
+    box-shadow  : 0px 12px 24px rgb(0, 0, 0, 0.2); /* Sombra más pronunciada al hacer hover */
     }
     
     .service-icon {
@@ -1058,7 +1058,7 @@ nav {
     }
     .service-card {
         background: white;
-        : 0px 8px 16px rgb(0, 0, 0, 0.1);
+        box-shadow : 0px 8px 16px rgb(0, 0, 0, 0.1);
         padding: 20px;
         border-radius: 15px;
         text-align: center;
@@ -1086,7 +1086,7 @@ nav {
     padding: 20px;
     background: none(to right, #a3e1e2, #d1a6e0, #ffffff);
     border-radius: 10px;
-    : 0px 2px 8px rgb(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 8px rgb(0, 0, 0, 0.1);
     }
     
     .step {
@@ -1094,7 +1094,7 @@ nav {
     padding: 15px;
     
     border-radius: 5px;
-    : 0px 2px 4px rgb(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 4px rgb(0, 0, 0, 0.1);
     }
     
     .step h3 {
@@ -1104,7 +1104,7 @@ nav {
     
     padding: 50px 20px;
     border-radius: 10px;
-    : 0px 2px 8px rgb(0, 0, 0, 0.1);
+    box-shadow : 0px 2px 8px rgb(0, 0, 0, 0.1);
     }
     .process-container {
     position: relative;
@@ -1132,7 +1132,7 @@ nav {
     /* Cambia la clase .service-card */
     .service-card {
     background: transparent; /* Elimina el fondo */
-    : none; /* Elimina la sombra */
+    box-shadow: none; /* Elimina la sombra */
     padding: 20px; /* Mantiene el espaciado interno */
     text-align: center; /* Centra el texto */
     transition: transform 0.3s; /* Mantiene la transición */
@@ -1173,7 +1173,7 @@ nav {
     background-color: white; /* Fondo blanco para las tarjetas */
     width: calc(25% - 10px); /* Ancho de la tarjeta ajustado para 4 en una fila, restando margen */
     margin: 5px; /* Espacio entre las tarjetas */
-    : 0 4px 8px rgb(0, 0, 0, 0.1); /* Sombra más suave */
+    box-shadow: 0 4px 8px rgb(0, 0, 0, 0.1); /* Sombra más suave */
     transition: transform 0.2s; /* Transición suave para efectos */
     text-align: center; /* Centrar el texto dentro de la tarjeta */
     }
@@ -1245,7 +1245,7 @@ nav {
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    : 0px 2px 10px rgb(0, 0, 0, 0.3);
+    box-shadow : 0px 2px 10px rgb(0, 0, 0, 0.3);
     cursor: pointer;
     z-index: 1000;
     text-decoration: none;
@@ -1308,7 +1308,7 @@ nav {
         justify-content: space-between;
         align-items: center;
         z-index: 10;
-        : 0 2px 10px rgb(0, 0, 0, 0.1);
+        box-shadow   : 0 2px 10px rgb(0, 0, 0, 0.1);
     }
     
     .logo img {
@@ -1384,7 +1384,7 @@ nav {
     /* Tarjetas */
     .card {
         background: white;
-        : 0px 4px 8px rgb(0, 0, 0, 0.1);
+        box-shadow: 0px 4px 8px rgb(0, 0, 0, 0.1);
         padding: 20px;
         border-radius: 10px;
         width: 300px;
