--- a/css/principal.css
+++ b/css/principal.css
@@ -38,14 +38,7 @@ display: flex; /* Asegura que los elementos de menú estén en una línea */
 margin-left: auto; /* Empuja el menú al final (derecha) */
 }
 
-nav a {
-margin: 0 15px;
-color: #333;
-text-decoration: none;
-font-weight: 500;
-font-size: 1rem;
-transition: color 0.3s;
-}
+
 
 nav a:hover {
 color: #ff6600;
@@ -214,6 +207,7 @@ color: #ff6600;
     justify-content: center;
     gap: 20px;
     margin-top: 40px;
+    text-align: center;
 }
 .benefit-card, .service-card {
     background: white;
@@ -598,7 +592,7 @@ margin: 5px; /* Reducir margen en pantallas pequeñas */
 background-color:#ccc;
 }
 #section5{
-    background-color: rgb(221, 163, 213); /* Degradado de azul claro a violeta suave y blanco */}
+    background-color: rgb(255, 221, 252); /* Degradado de azul claro a violeta suave y blanco */}
 
 .whatsapp-btn {
 position: fixed;
@@ -1730,8 +1724,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #333;
-    color: white;
+    background-color: white;
+    color:#333;
 }
 
 .logo img {
@@ -1744,7 +1738,6 @@ nav {
 }
 
 .menu a {
-    color: white;
     text-decoration: none;
 }
 
@@ -1806,3 +1799,67 @@ nav {
     margin-bottom: 20px;
 }
 
+nav a {
+    margin: 0 15px;
+    color: #333;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1rem;
+    transition: color 0.3s;
+    }.card-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .card {
+        flex: 1 1 calc(25% - 20px); /* 4 tarjetas en fila, ajustando espacios */
+        background: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        max-width: 280px; /* Para evitar que sean demasiado anchas en pantallas grandes */
+    }
+
+    .card-icon {
+        font-size: 40px;
+    }
+
+    .card-title {
+        font-size: 18px;
+        margin: 10px 0;
+    }
+
+    .card-paragraph {
+        font-size: 14px;
+        color: #666;
+    }
+
+    .card-button {
+        display: inline-block;
+        margin-top: 10px;
+        padding: 10px 15px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+    }
+
+    /* Responsivo */
+    @media (max-width: 1024px) {
+        .card {
+            flex: 1 1 calc(50% - 20px); /* 2 tarjetas por fila en tablets */
+        }
+    }
+
+    @media (max-width: 600px) {
+        .card {
+            flex: 1 1 100%; /* Una tarjeta por fila en móviles */
+        }
+    }
+    .process-container img{
+        background-size: cover;
+        width:90%;
+    }
